# ordiseq

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Justfile  LICENSE.txt  README.md
.github/workflows/: release.yml  rust.yml
coverage/master/: index.html
coverage/master/coverage/home/runner/work/ordiseq/ordiseq/ordiseq/src/klib_trait/: mod.rs.html
coverage/master/coverage/home/runner/work/ordiseq/ordiseq/ordiseq/src/midi/: mod.rs.html
coverage/master/coverage/home/runner/work/ordiseq/ordiseq/ordiseq/src/sequence/: drum_sequence.rs.html  euclidean_rhythm.rs.html  mod.rs.html  sequence.rs.html
coverage/master/coverage/home/runner/work/ordiseq/ordiseq/ordiseq/src/time/: mod.rs.html  time.rs.html  time_signature.rs.html
coverage/master/coverage/home/runner/work/ordiseq/ordiseq/ordiseq/src/util/: file.rs.html  log.rs.html
coverage/master/coverage/home/runner/work/ordiseq/ordiseq/ordiseq_plug/src/: lib.rs.html
coverage/master/coverage/home/runner/work/ordiseq/ordiseq/scale_omnibus/src/: lib.rs.html
coverage/master/coverage/home/runner/work/ordiseq/ordiseq/xtask/src/: main.rs.html
data/: scales.yaml
examples/: test.rs
ordiseq/: README.md
ordiseq/examples/: circle_of_fifths.rs  drum_test.rs  jingle_bells.rs  test.rs
ordiseq/src/: lib.rs
ordiseq/src/error/: mod.rs
ordiseq/src/klib_trait/: mod.rs
ordiseq/src/midi/: mod.rs
ordiseq/src/prelude/: mod.rs
ordiseq/src/scales/: mod.rs
ordiseq/src/sequence/: drum_sequence.rs  euclidean_rhythm.rs  mod.rs  sequence.rs
ordiseq/src/time/: mod.rs  time.rs  time_signature.rs
ordiseq/src/util/: file.rs  log.rs
ordiseq_plug/: Cargo.toml
ordiseq_plug/src/: lib.rs
scale_omnibus/: Cargo.toml  README.md
scale_omnibus/data/: scales.yaml
scale_omnibus/src/: Jingle_Bells.mid  lib.rs
src/: cli.rs  lib.rs
src/prelude/: mod.rs
src/scales/: mod.rs
