[package]
name = "ordiseq"
description = "A MIDI sequencer library"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/EnigmaCurry/ordiseq"
homepage = "https://github.com/EnigmaCurry/ordiseq"
license = "MIT"
keywords = []
readme = "README.md"
documentation = "https://docs.rs/ordiseq"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[dependencies]
dirs = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"
kord = { version = "0.7.1", default-features = false}
midir = "0.10.1"
midly = "0.5.3"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.9"

[dev-dependencies]
shell-words = "1.1.0"
clap = "4.5.17"
clap_complete = "4.5.29"

[build-dependencies]
clap = "4.5.17"
clap_complete = "4.5.29"
dirs = "5.0.1"
