[package]
name = "ordiseq_plug"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/EnigmaCurry/ordiseq"
homepage = "https://github.com/EnigmaCurry/ordiseq"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
xtask = { path = "../xtask" }