[package]
name = "scale_omnibus"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/EnigmaCurry/ordiseq"
homepage = "https://github.com/EnigmaCurry/ordiseq"
license = "MIT"
documentation = "https://docs.rs/ordiseq/latest/scale_omnibus"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.9"
